src/objects/Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Update_Safety_Plan_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Update Safety Plan Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Update Safety Plan Advocate)</relationshipLabel>
        <relationshipName>ChecklistsMu8m</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update_Safety_Plan_Date__c</fullName>
        <label>Update Safety Plan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Welcome_Packet_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Welcome Packet Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Welcome Packet Advocate)</relationshipLabel>
        <relationshipName>Checklists2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Welcome_Packet_Completion_Date__c</fullName>
        <description>Date went through welcome packet.</description>
        <inlineHelpText>Date went through welcome packet.</inlineHelpText>
        <label>Welcome Packet Completion Date</label>
        <type>Date</type>
    </fields>
    <label>Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Checklists</fullName>
        <columns>NAME</columns>
        <columns>Participant_Name__c</columns>
        <columns>Case_Record__c</columns>
        <columns>Arrival_Status__c</columns>
        <columns>Forms_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Checklists</label>
    </listViews>
    <listViews>
        <fullName>Checklist_Statu</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Case_Record__c</columns>
        <columns>Participant_Name__c</columns>
        <columns>NAME</columns>
        <columns>Arrival_Status__c</columns>
        <columns>Forms_Status__c</columns>
        <columns>Exit_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Checklist Status</label>
    </listViews>
    <nameField>
        <displayFormat>CHK-{00000}</displayFormat>
        <label>Checklist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>